--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "next-international": "^1.2.4",
     "react": "^18",
