--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.1.4",
     "next-international": "^1.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4"
   },
   "devDependencies": {
     "@types/node": "^20",
