--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-international": "^1.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-fast-marquee": "^1.6.4"
+    "react-fast-marquee": "^1.6.4",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
