--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "next-international": "^1.2.4",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
