--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@studio-freight/react-lenis": "^0.0.46",
