--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@studio-freight/react-lenis": "^0.0.46",
+    "firebase": "^10.12.0",
     "framer-motion": "^11.0.22",
     "next": "14.1.4",
     "next-international": "^1.2.4",
