--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-tilt": "^1.0.2",
+    "react-toastify": "^10.0.5",
     "three": "^0.163.0"
   },
   "devDependencies": {
